--- a/lc_main.tex
+++ b/lc_main.tex
@@ -712,7 +712,8 @@ Security - somehow sign a whole class of transactions?}
 
 The light client interacts with a number of full nodes. We assume that all parties know the current time up to an allowable deviation $\delta_t$. We allow for protocols featuring a single or multiple full nodes, and (orthogonally) protocols that are supported by a smart contract at the cost of additional setup. An important difference between the single and multi-node model is that existential honesty trivialises the single-node case. As such, single-node protocols are usually required to operate under more stringent security assumptions.
 
-The end result of such protocols are typically one of the following: an update to the light client's state or the creation of a transaction to be posted on the blockchain.  In Section \ref{sec:threats} we give an informal treatment of potential threats and in Section \ref{sec:protocols} we describe a number of such protocols and formalize the corresponding security notions.
+The end result of such protocols are typically one of the following: an update to the light client's state or the creation of a transaction to be posted on the blockchain.  In the next section, we describe our security requirements  for such protocols as well as some modeling assumptions  for their environment.
+
 
 \todobox{
  \begin{itemize}
@@ -746,83 +747,6 @@ How can we formalize the intent of a light client without revealing secret key?
 
 Can we have viewing keys?}
 
-
-\section{Threat Model and Threat Mitigation}
-\subsection{Model Requirements}
-\paragraph{Rational Actors} For liveness, we assume that protocol participants are rational in the sense that they will opt to complete tasks that benefit them directly (i.e in the form of rewards, or in the form of a desired transaction being posted). For safety we assume parties can be fully malicious.
-
-\paragraph{Transaction Expiry} For safety, we require that transactions can be set to be valid only within a certain time window. This is to prevent trivial attacks where a malicious SPO delays posting a transaction indefinitely. The user could contact a different SPO to create a second transaction with similar parameters (e.g. by paying the same recipient with different coins) with the risk that the first SPO would also post their transaction, making the user pay twice.
-
-\paragraph{Idempotent Doublespends} For safety we also require that attempted double spends are idempotent, i.e. they are simply not valid transactions and do not penalize (slash) the user for signing them. 
-
-\label{sec:threats}
-
-
-\textbf{Erroneous User Balance.} A common threat vector is convincing the user of an erroneous balance on their account. This can lead a user to
-complete a transaction outside the blockchain based on wrong information (e.g. accept an invalid transaction as payment for goods, or exchange his private key
-in the understanding that is controls $x$ stake instead of $y$.)
-
-\textbf{Invalid Transactions.}  In response to an LC query, it may be desirable for an SP to construct a transaction that does not meet the intent specified by the user. For example, the created transaction may pay the wrong recipient, or pay an amount over and above the one specified by the user.
-
-\textbf{Protocol Failures.}  In a multi-node protocol, a malicious user may wish to force the protocol to abort even though there exist a number of honest nodes who would otherwise ensure the protocol completes successfully. In the single node, a malicious node can always cause a protocol to fail by not replying.
-
-\textbf{Suboptimal Transactions.}  In response to an LC query, it is possible for an SP to construct a
-\emph{sub-optimal} transaction which nevertheless matches the LC's specification. For example, the LC may
-include a larger-than-necessary system fee in the transaction, or not provide the LC with the best
-available exchange price for a specific token.
-Our model assumes that an LC is able to submit their transaction to multiple SPs, and will have pick one
-transaction to sign from the resulting set $S$ of responses received within some pre-defined amount of
-waiting time. Alternatively, the LC may simply choose the first valid transaction sent by an SP.
-Assuming such a competitive SP environment, the suboptimal transaction threat is mitigated by
-the incentive, in the form of a service fee for the SP, to provide both quickest and the most optimal
-response. Note that the SP is not a-priori aware of how the LC will make
-the choice of what transaction to sign, and how long their waiting period is.
-
-\textbf{Response Delays and Stale State.}
-\label{sec:stale-state}
-
-Arbitrary delay caused by SP: SP can offer to execute an intent and provide the crafted TX, but never publish it on the chain.
-    For this reason, SP should provide the hashes of the UTxO references (or similar) to the light client, s.t. the LC can reuse those references in another transaction. This avoids the case where SP hangs on to the TX indefinitely or posts it at an arbitrary point in time causing two or more TXs being executed if the LC resubmits its intent/TX.
-
-\textbf{Non-submission of Transactions.} A class of protocols deals with the joint creation of transactions by the light client and node, with the transaction submission being left to the full node. It is possible for the full node to not post such a transaction in a timely manner, potentially leading the user to retry at a different time. As intents are not necessarily satisfied by a unique transaction, it is possible that the first full node may be able to post the first transaction (which is purposefully delayed) after the posting of the second one. This can cause the user to e.g. double pay for a service as well as the full node fee.
-
-\textbf{Falsified or Unsafe Transaction Data}. SP lies to client about the UTxOs being spent by the tx, and tricks them into doing something they did not want to do (that is why 0-knowledge proof that outputs were correctly specified)
-
-\textbf{Data Leakage.} The 2-PC protocol we propose is one that has leakage. In particular,
-the co-construction of a transaction by the LC and the SP allows the LC to learn certain information
-about the chain state, such as, e.g. the upper and lower bound of the interval containing the current blockchain
-time. In fact, under certain circumstances, after several iterations of our SP-LC protocol, the LC
-may gain the capacity to construct certain kinds of transactions themselves. As noted above, this
-information can also be gained from blockchain explorer services. The
-reason an LC may engage in our protocol that it allows all transaction-construction,
-and state-tracking and querying logic to be off-loaded to the SP. If the LC can do all this themselves,
-engaging in the protocol does not benefit them in any way.
-
-However, there is a specific kind of
-data leakage threat we have have built the protocol to be resilient against : leakage of $\UTxO$ entry
-identifiers, i.e. the inputs of a transaction. It is impossible to construct a valid transaction
-without knowing the the inputs that need to be included in it for it to match the specification,
-and this information cannot be guessed without knowledge of blockchain state. If this information
-is somehow leaked to the LC along with the modified transaction, it makes it possible to for the
-LC to not pay the SP for their work.
-
-Specifically, the full transaction (including the correct inputs) can be modified locally to
-replace the output containing the SP's fee with one returning it as change to the LC, signed, and
-submitted to the network by the LC. As part of our protocol, the SP replaces the inputs of a
-transaction with outputs that correspond to those inputs in the UTxO set.
-We have demonstrated that guessing inputs without access to either the inputs themselves, or
-the transactions that have placed them into the UTxO set, is sufficiently difficult to not be considered a
-vector of attack.
-This data may also be leaked by getting recorded in a script, datum, or redeemer. E.g., a script
-may require that its redeemer also list the inputs of the transaction. The responsibility of mitigating
-this type of leakage rests on the SP, who can address this by limiting the kinds of specifications
-they agree to fulfill.
-
-\todobox{TODO : make sure we have shown that "We have demonstrated that guessing inputs
-without access to either the inputs themselves, or
-the transactions that have placed them into the UTxO set,
- is sufficiently difficult to not be considered a
-vector of attack."}
 
 \section{Light Client Protocols}
 \label{sec:protocols}
@@ -875,42 +799,20 @@ For an honest service provider SP and any client $C_\mathcal{A}$ we have that: c
 
 
 
-\textbf{Single-SP vs Multi-SP Protocols. }
-We describe a basic protocol in which a single LC queries a single SP for constructing a
-transaction matching LC's specification, and then eventually that transaction getting posted
-after all protocol steps are completed. We assume that all specification-meeting
-transactions are acceptable to the LC. However, we can also formulate a version of this
-protocol where the LC instead sends the specification to multiple SPs, selecting the best
-response, and engaging in the rest of the protocol only with that SP.
 
-To do this, let $\fun{opt} : \TxAbs \to \Z$ be a function that rates abstract
-transactions to express LC's preferences. For example, the total amount of primary tokens
-spent by the transaction can be such a function :
-$\fun{opt}~\var{tx} = \fun{coinValue}~(\sum_{o \in~\var{txd}.\fun{spentOuts}} \var{o}.\val)$.
-A transaction $\var{tx}$ is \emph{optimal} in a set $S \in \type{Set}~\TxAbs$ when
+\subsection{A Communication Optimal Transaction Building Protocol}
+We given an overview on our light client protocol and its components.
+As the protocol is uniquely suited for UTxO-based blockchains, we develop our approach
+to support the general ledger model explained in Section~\ref{sec:model}
+and the intents set forth in Section~\ref{sec:dsl}.
 
- \[ \fun{opt}~\var{tx} = \fun{min}~\{~\fun{opt}~\var{tx'}~\vert~\var{tx'}~\in~S~\} \]
+\subsubsection{Model Requirements}
+\label{sec:model}
+\textbf{Rational Actors} For liveness, we assume that protocol participants are rational in the sense that they will opt to complete tasks that benefit them directly (i.e in the form of rewards, or in the form of a desired transaction being posted). For safety we assume parties can be fully malicious.
 
-To get a multi-SP protocol, the first step of the single-SP protocol in Figure \ref{fig:protocol}
-must be augmented, so that the pair $(\fun{opt}, \var{int_{post}}$ is sent to each SP instead of just
-sending $\var{int_{post}}$.
-Upon receiving transactions $\var{tx}_{A,i}$, with $0\leq i < k$, from each of the $k$ SPs responding
-to LC's query, LC will engage in the rest of the protocol only with the sender of $\var{tx}_{A,i}$.
+\textbf{Transaction Expiry} For safety, we require that transactions can be set to be valid only within a certain time window. This is to prevent trivial attacks where a malicious SPO delays posting a transaction indefinitely. The user could contact a different SPO to create a second transaction with similar parameters (e.g. by paying the same recipient with different coins) with the risk that the first SPO would also post their transaction, making the user pay twice.
 
- Note that the $\fun{opt}$ function and the specification serve different purposes in the protocol.
- The specification is checked, and any response transaction that does not satisfy it is discarded.
- On the other hand, it is not required that a transaction be optimal across all possible
- specification-satisfying transactions.  The kind of
- sophisticated optimization (such as what is required, e.g., for optimized order-matching) would require
- an entirely distinct set of tools for demonstrating the optimality result, such as ZK proofs about
- the full blockchain state (rather than just the associated transaction), together with evidence that
- the proof is about state that is \emph{sufficiently current} (see Section \ref{sec:stale-state}).
- For example, a proof that
- that there were no better offers for a specific token available on the ledger at the time the SP
- produced a response to the LC. We do not assume that
- either the SP or the LC are necessarily capable of performing or verifying (resp.) optimality according to the
- function LC requested be optimized, but an LC is capable to comparing transactions using $\fun{opt}$.
-
+\textbf{Idempotent Doublespends} For safety we also require that attempted double spends are idempotent, i.e. they are simply not valid transactions and do not penalize (slash) the user for signing them. 
 
 
 \subsection{Protocol Description}
@@ -1027,6 +929,149 @@ We show our light client protocol that leverages weakly blind signatures in Figu
 %      ultra thick, inner sep=0pt, rounded corners=1mm,
 %      draw=cyan, label={[cyan,align=center]270:WBPS Execution}]{};
 %\end{tikzpicture}
+
+
+
+\subsection{Outline --To be removed}
+The following computations are performed in the protocol
+
+\begin{itemize}
+    \item[(i)] Intent specification is generated (see Section \ref{sec:dsl})
+    \item[] \textcolor{orange}{mr: do we still need this extra signature?}
+    \item[(ii)] Signature is generated as follows :
+    \[\var{sig} = \fun{sign}~(\var{int_{post}}, sk_{\mathrm{client}})\]
+    \item[(iii)] The signature is checked as follows :
+    \[ \fun{checkSig} (\var{int_{post}}, vk_{\mathrm{client}}, \var{sig}) = \true \]
+    \item[(iv)] The transaction is generated as follows, including a randomly generated bytestring
+    in the $\fun{auxData}$ field for extra entropy :
+    \[ \var{tx} = \fun{mkToSpec}~(\var{ls},~\var{int_{post}},~\var{tx}_t)~\{~\fun{auxData}~=~\fun{random}~\} \]
+    \item[(v)] Abstract transaction is generated as :
+    \[ \var{tx}_A = \fun{mkAbs}~\var{tx}  \]
+    \item[(vi)] Blind Signature Commitment (see Section \ref{sec:blind} for details)
+
+    \item[(vii)] Intent specification Proof (see Section \ref{sec:dsl}) :
+    \[ \chkSpec{(\var{int_{post}})}(\var{tx}_A )= \true \]
+    \item[(viii)] Proof Check. Blind signatures are computed by (see Section \ref{sec:blind} for details), with $\var{sks} = \fun{getSKs}~\fun{dom}~(\var{tx} . \fun{sigs})$ :
+    \[ \var{sigs} = \{~(s,~\fun{blindSign}~(h,~\var{tx}_A,~ s)) \vert s \in sk_{\mathrm{client}} \cup ~\var{sks}~\} \]
+    \item[(ix)] Signatures are computed from blind signatures (see Section \ref{sec:blind} for details) :
+    \[ \var{sigs'} = \{~(s,~\fun{mkRealSig}~(s,~h,~\var{tx}_A,~k)) ~\vert~(s, k) \in \var{sigs}~\} \]
+    \item[(ix)] Signatures are added to the transaction
+    \[ \var{tx'} = \var{tx}~\{~sig = \var{sigs'}~\} \]
+\end{itemize}
+
+\subsection{discussion}
+
+\label{sec:threats}
+
+
+\textbf{Erroneous User Balance.} A common threat vector is convincing the user of an erroneous balance on their account. This can lead a user to
+complete a transaction outside the blockchain based on wrong information (e.g. accept an invalid transaction as payment for goods, or exchange his private key
+in the understanding that is controls $x$ stake instead of $y$.)
+
+\textbf{Invalid Transactions.}  In response to an LC query, it may be desirable for an SP to construct a transaction that does not meet the intent specified by the user. For example, the created transaction may pay the wrong recipient, or pay an amount over and above the one specified by the user.
+
+\textbf{Protocol Failures.}  In a multi-node protocol, a malicious user may wish to force the protocol to abort even though there exist a number of honest nodes who would otherwise ensure the protocol completes successfully. In the single node, a malicious node can always cause a protocol to fail by not replying.
+
+\textbf{Suboptimal Transactions.}  In response to an LC query, it is possible for an SP to construct a
+\emph{sub-optimal} transaction which nevertheless matches the LC's specification. For example, the LC may
+include a larger-than-necessary system fee in the transaction, or not provide the LC with the best
+available exchange price for a specific token.
+Our model assumes that an LC is able to submit their transaction to multiple SPs, and will have pick one
+transaction to sign from the resulting set $S$ of responses received within some pre-defined amount of
+waiting time. Alternatively, the LC may simply choose the first valid transaction sent by an SP.
+Assuming such a competitive SP environment, the suboptimal transaction threat is mitigated by
+the incentive, in the form of a service fee for the SP, to provide both quickest and the most optimal
+response. Note that the SP is not a-priori aware of how the LC will make
+the choice of what transaction to sign, and how long their waiting period is.
+
+\textbf{Response Delays and Stale State.}
+\label{sec:stale-state}
+
+Arbitrary delay caused by SP: SP can offer to execute an intent and provide the crafted TX, but never publish it on the chain.
+    For this reason, SP should provide the hashes of the UTxO references (or similar) to the light client, s.t. the LC can reuse those references in another transaction. This avoids the case where SP hangs on to the TX indefinitely or posts it at an arbitrary point in time causing two or more TXs being executed if the LC resubmits its intent/TX.
+
+\textbf{Non-submission of Transactions.} A class of protocols deals with the joint creation of transactions by the light client and node, with the transaction submission being left to the full node. It is possible for the full node to not post such a transaction in a timely manner, potentially leading the user to retry at a different time. As intents are not necessarily satisfied by a unique transaction, it is possible that the first full node may be able to post the first transaction (which is purposefully delayed) after the posting of the second one. This can cause the user to e.g. double pay for a service as well as the full node fee.
+
+\textbf{Falsified or Unsafe Transaction Data}. SP lies to client about the UTxOs being spent by the tx, and tricks them into doing something they did not want to do (that is why 0-knowledge proof that outputs were correctly specified)
+
+\textbf{Data Leakage.} The 2-PC protocol we propose is one that has leakage. In particular,
+the co-construction of a transaction by the LC and the SP allows the LC to learn certain information
+about the chain state, such as, e.g. the upper and lower bound of the interval containing the current blockchain
+time. In fact, under certain circumstances, after several iterations of our SP-LC protocol, the LC
+may gain the capacity to construct certain kinds of transactions themselves. As noted above, this
+information can also be gained from blockchain explorer services. The
+reason an LC may engage in our protocol that it allows all transaction-construction,
+and state-tracking and querying logic to be off-loaded to the SP. If the LC can do all this themselves,
+engaging in the protocol does not benefit them in any way.
+
+However, there is a specific kind of
+data leakage threat we have have built the protocol to be resilient against : leakage of $\UTxO$ entry
+identifiers, i.e. the inputs of a transaction. It is impossible to construct a valid transaction
+without knowing the the inputs that need to be included in it for it to match the specification,
+and this information cannot be guessed without knowledge of blockchain state. If this information
+is somehow leaked to the LC along with the modified transaction, it makes it possible to for the
+LC to not pay the SP for their work.
+
+Specifically, the full transaction (including the correct inputs) can be modified locally to
+replace the output containing the SP's fee with one returning it as change to the LC, signed, and
+submitted to the network by the LC. As part of our protocol, the SP replaces the inputs of a
+transaction with outputs that correspond to those inputs in the UTxO set.
+We have demonstrated that guessing inputs without access to either the inputs themselves, or
+the transactions that have placed them into the UTxO set, is sufficiently difficult to not be considered a
+vector of attack.
+This data may also be leaked by getting recorded in a script, datum, or redeemer. E.g., a script
+may require that its redeemer also list the inputs of the transaction. The responsibility of mitigating
+this type of leakage rests on the SP, who can address this by limiting the kinds of specifications
+they agree to fulfill.
+
+\todobox{TODO : make sure we have shown that "We have demonstrated that guessing inputs
+without access to either the inputs themselves, or
+the transactions that have placed them into the UTxO set,
+ is sufficiently difficult to not be considered a
+vector of attack."}
+
+
+
+\subsubsection{Single-SP vs Multi-SP Protocols and optimality }
+
+\todobox{split into two discussions ?}
+
+We describe a basic protocol in which a single LC queries a single SP for constructing a
+transaction matching LC's specification, and then eventually that transaction getting posted
+after all protocol steps are completed. We assume that all specification-meeting
+transactions are acceptable to the LC. However, we can also formulate a version of this
+protocol where the LC instead sends the specification to multiple SPs, selecting the best
+response, and engaging in the rest of the protocol only with that SP.
+
+To do this, let $\fun{opt} : \TxAbs \to \Z$ be a function that rates abstract
+transactions to express LC's preferences. For example, the total amount of primary tokens
+spent by the transaction can be such a function :
+$\fun{opt}~\var{tx} = \fun{coinValue}~(\sum_{o \in~\var{txd}.\fun{spentOuts}} \var{o}.\val)$.
+A transaction $\var{tx}$ is \emph{optimal} in a set $S \in \type{Set}~\TxAbs$ when
+
+ \[ \fun{opt}~\var{tx} = \fun{min}~\{~\fun{opt}~\var{tx'}~\vert~\var{tx'}~\in~S~\} \]
+
+To get a multi-SP protocol, the first step of the single-SP protocol in Figure \ref{fig:protocol}
+must be augmented, so that the pair $(\fun{opt}, \var{int_{post}}$ is sent to each SP instead of just
+sending $\var{int_{post}}$.
+Upon receiving transactions $\var{tx}_{A,i}$, with $0\leq i < k$, from each of the $k$ SPs responding
+to LC's query, LC will engage in the rest of the protocol only with the sender of $\var{tx}_{A,i}$.
+
+ Note that the $\fun{opt}$ function and the specification serve different purposes in the protocol.
+ The specification is checked, and any response transaction that does not satisfy it is discarded.
+ On the other hand, it is not required that a transaction be optimal across all possible
+ specification-satisfying transactions.  The kind of
+ sophisticated optimization (such as what is required, e.g., for optimized order-matching) would require
+ an entirely distinct set of tools for demonstrating the optimality result, such as ZK proofs about
+ the full blockchain state (rather than just the associated transaction), together with evidence that
+ the proof is about state that is \emph{sufficiently current} (see Section \ref{sec:stale-state}).
+ For example, a proof that
+ that there were no better offers for a specific token available on the ledger at the time the SP
+ produced a response to the LC. We do not assume that
+ either the SP or the LC are necessarily capable of performing or verifying (resp.) optimality according to the
+ function LC requested be optimized, but an LC is capable to comparing transactions using $\fun{opt}$.
+
+
 
 
 
