--- a/lcbib.bib
+++ b/lcbib.bib
@@ -296,3 +296,88 @@ location = {Zagreb, Croatia}
 	publisher = {Springer Berlin Heidelberg},
 	title = {Wallet Databases with Observers},
 	year = {1993}}
+
+@InProceedings{mithril,
+author="Chaidos, Pyrros
+and Kiayias, Aggelos",
+editor="Kohlweiss, Markulf
+and Di Pietro, Roberto
+and Beresford, Alastair",
+title="Mithril: Stake-Based Threshold Multisignatures",
+booktitle="Cryptology and Network Security",
+year="2025",
+publisher="Springer Nature Singapore",
+address="Singapore",
+pages="239--263",
+abstract="Stake-based multiparty cryptographic primitives operate in a setting where participants are associated with their stake, security is argued against an adversary that is bounded by the total stake it possesses ---as opposed to number of parties--- and we are interested in scalability, i.e., the complexity of critical operations depends only logarithmically in the number of participants (who are assumed to be numerous).",
+isbn="978-981-97-8013-6"
+}
+
+@misc{committee,
+      title={Practical Light Clients for Committee-Based Blockchains}, 
+      author={Frederik Armknecht and Ghassan Karame and Malcom Mohamed and Christiane Weis},
+      year={2024},
+      eprint={2410.03347},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2410.03347}
+}
+
+@misc{celo,
+      title={The Celo Protocol: A Multi-Asset Cryptographic Protocol for Decentralized Social Payments}, 
+      author={cLabs Team},
+      year={2025},
+      url={https://celo.org/papers/whitepaper}
+}
+
+@misc{khalani,
+      title={Khalani Arcadia: An Open Platform for Intent-Driven Agent Collaboration}, 
+      author={Khalani Team},
+      year={2025},
+      url={https://khalani.network/aip_whitepaper.pdf}
+}
+
+@misc{anoma,
+      title={Anoma : a unified architecture for full-stack decentralized applications}, 
+      author={Christopher Goes, Awa Sun Yin, Adrian Brink },
+      year={2022},
+      url={https://github.com/anoma/whitepaper/blob/main/whitepaper.pdf}
+}
+
+@misc{lazy,
+      title={Light Clients for Lazy Blockchains}, 
+      author={Ertem Nusret Tas and David Tse and Lei Yang and Dionysis Zindros},
+      year={2024},
+      eprint={2203.15968},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2203.15968}, 
+}
+
+@misc{ethereum,
+      title={Ethereum development documentation}, 
+      author={Ethereum Team},
+      year={2023},
+      url={https://ethereum.org/en/developers/docs/}
+}
+
+@misc{celer,
+      title={Celer Network: Bring Internet Scale to Every Blockchain}, 
+      author={ScaleSphere Foundation Ltd. (“Foundation”)},
+      year={2018},
+      url={https://celer.network/doc/CelerNetwork-Whitepaper.pdf}
+}
+
+@misc{ripple,
+      title={The Ripple Protocol Consensus Algorithm}, 
+      author={David Schwartz, Noah Youngs, Arthur Britto},
+      year={2018},
+      url={https://ripple.com/files/ripple_consensus_whitepaper.pdf}
+}
+
+@misc{raiden,
+      title={Raiden Network 3.0.1 Documentation}, 
+      author={Raiden Team },
+      year={2025},
+      url={https://raiden-network.readthedocs.io/}
+}
